2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Assume system provides tmpfile(3).

	* libpq.c [!HAVE_TMPFILE]: Don't #include "tmpfile.h";
	don't #define tmpfile to the locally-provided one.
	* Makefile.am (postgres_la_SOURCES): Remove tmpfile.c.
	* tmpfile.h: Delete file.
	* tmpfile.c: Delete file.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Consolidate Guile API specification.

	* bcruft.h: Delete file.
	* fcruft.h: Delete file.
	* gi.h: New file.
	* libpq.c: No longer #include <libguile.h> and <guile/gh.h>.
	Instead, #include "gi.h".
	* Makefile.am (postgres_la_SOURCES):
	Add gi.h; remove bcruft.h and fcruft.h.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add infrastructure to more easily tweak GCC warnings for "make all".

	* Makefile.am (AM_CFLAGS): New var.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Tweak C code to eliminate some compiler warnings.

	* libpq.c (lob_write): Remove unnecessary cast from `void *'.
	Also, use `size_t' for vars involved in computing `remaining'.
	(pg_result_error_field): Add `default: ;' to `switch'.
	(init_module): Use `unsigned int' for iteration var.

2008-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	C optimization: Make `pg-lo-read' faster.

	* libpq.c (MAX_NEWSTRING_LENGTH): New macro.
	(lob_lo_read): Rewrite.

2008-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	GCC annotation: Add __attribute__ ((unused)) for some args.

	* libpq.c (UNUSED): New macro.
	(xc_display, lob_input_waiting_p, res_display, sepo_display): Use it.

2008-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Delete degenerate mark functions.

	* libpq.c (res_mark, sepo_mark): Delete funcs.
	(init_module): Don't specify mark funcs for res and sepo smobs.

2008-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use SCM_{MEMORY,MISC}_ERROR and SCM_SYSERROR.

	* libpq.c (lob_mklobport): Use `SCM_MEMORY_ERROR'.
	(lob_lo_creat, lob_lo_open): Use `SCM_MISC_ERROR'.
	(lob_flush): Use `SCM_SYSERROR'.